# conjoin-sdk

./: .gitignore  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  renovate.json  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/scripts/: check-age.js  check-supply-chain.js
.github/workflows/: age-gate.yml  check-python.yml  check-spec.yml  check-typescript.yml  ci.yml  dependabot-lockfile.yml  publish-python.yml  publish-typescript.yml  publish.yml  supply-chain-gate.yml
sdks/python/: README.md  project.json  pyproject.toml
sdks/python/codegen/: __init__.py  __main__.py  ir.py  naming.py  render.py  runner.py  schema.py  spec.py
sdks/python/examples/: ai_streaming.py  async_client.py  messaging_email.py  package_metadata.py  pagination.py  storage_upload_download.py  sync_client.py
sdks/python/scripts/: run_python.py
sdks/python/src/conjoin_cloud/: __init__.py  _ai.py  _async_client.py  _client.py  _config.py  _constants.py  _errors.py  _models.py  _multipart.py  _request_options.py  _request_tracing.py  _response.py  _storage.py  _transport.py  _version.py
sdks/python/tests/: test_codegen.py  test_core.py  test_generated.py  test_helpers.py  test_package.py
sdks/typescript/: README.md  biome.json  package.json  project.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
sdks/typescript-expo/: README.md  package.json  project.json  tsup.config.ts
sdks/typescript-react/: README.md  package.json  project.json  tsconfig.json  tsup.config.ts
sdks/typescript-react-core/: README.md  package.json  project.json  tsconfig.json  tsconfig.web.json  tsup.config.ts
spec/: openapi.json  package.json  project.json
spec/scripts/: validate.sh
tools/release/: python-version-actions.cjs  release-python.mjs  (+1 more)
(+230 files in other folders)
